
-------------------------------------------------------------------------------

Sun Nov 28 21:52:12 GMT 1999
(gilbertt)

Made the screensaver lock command configurable in E-ScreenSave.

-------------------------------------------------------------------------------

Mon Nov 29 01:08:58 GMT 1999
(gilbertt)

Hrm. A segfault with a certain form of url. Fixed.

-------------------------------------------------------------------------------

Sun Nov 28 20:38:33 EST 1999
(StriderZ)

Make focusing between an epplet and it's gadget's work a little better. Basically added sloppy-focus. The epplet remembers which gadget last had focus and, if none currently have focus and the last_gadget was a textboxes, passes key events to it. 

-------------------------------------------------------------------------------

Sun Nov 28 21:05:11 EST 1999
(StriderZ)

Change to something more like ClickToFocus. The gadgets won't *keep* the focus
unless you click them. This probably needs a little more work...

-------------------------------------------------------------------------------

Sun Nov 28 21:33:53 EST 1999
(StriderZ)

More fun with focus...

-------------------------------------------------------------------------------

Mon Nov 29 14:08:10 GMT 1999
(gilbertt)

Tidied up E-UrlWatch lots. Its pretty lean now.

-------------------------------------------------------------------------------

Mon Nov 29 16:03:53 PST 1999
(KainX)

Added support for specifying the width and height (in epplet units, 16 pixels)
of the E-Slides window.  -w <width> and -h <height> are the options.  The
default is the traditional 3x3, of course.  Note that this cannot be done via
config file options since the size is set before the config loader can be
called.

-------------------------------------------------------------------------------

Mon Nov 29 17:08:23 PST 1999
(KainX)

This fixes the bug E-Slides demonstrated in the focus stuff.  Doesn't seem to
break anything else as far as I can tell....